[package]
name = "drawing-worker"
version = "0.1.0"
authors = ["Martin R <hades32@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
cfg-if = "0.1.2"
worker = { git = "https://github.com/cloudflare/workers-rs" }
serde_json = "1.0.67"
embedded-graphics = "0.7.1"
image = "0.23.0"

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.1", optional = true }

[dependencies.embedded-graphics-simulator]
version = "0.3.0"
default-features = false

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
